--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 apispec==5.1.0
 appdirs==1.4.4
-attrs==21.2.0
+attrs==20.3.0
 autograd==1.3
 autoray==0.2.5
 black==21.8b0
@@ -11,6 +11,7 @@ charset-normalizer==2.0.4
 click==8.0.1
 coverage==5.5
 cryptography==3.4.8
+cython==0.29.27
 dill==0.3.4
 dlx==1.0.4
 docplex==2.21.207
@@ -21,7 +22,7 @@ flask-smorest==0.34.0
 future==0.18.2
 h5py==3.2.1
 idna==3.2
-importlib-metadata==4.8.1
+importlib-metadata==3.9.1
 inflection==0.5.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
@@ -30,8 +31,10 @@ jsonschema==3.2.0
 lxml==4.6.3
 MarkupSafe==2.0.1
 marshmallow==3.13.0
+minio==7.1.3
 more-itertools==8.9.0
 mpmath==1.2.1
+mthree==0.19.0
 multitasking==0.0.9
 mypy-extensions==0.4.3
 networkx==2.6.2
@@ -45,6 +48,7 @@ ply==3.11
 psutil==5.8.0
 pybind11==2.7.1
 pycparser==2.20
+pyquil==3.0.1
 pyrsistent==0.18.0
 python-constraint==1.4.0
 python-dateutil==2.8.2
@@ -54,6 +58,7 @@ qiskit-aer==0.8.2
 qiskit-aqua==0.9.4
 qiskit-ibmq-provider==0.16.0
 qiskit-ignis==0.6.0
+qiskit_ionq==0.1.4
 qiskit-terra==0.18.1
 Quandl==3.6.1
 regex==2021.8.28
