--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt;
     - name: Test with unittest and coverage-report
+      env:
+        TOKEN: ${{ secrets.IBMQ_TOKEN }}
       run: |
         coverage run --branch --include 'app/*' -m unittest discover
         coverage report
