--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,18 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    services:
-      minio:
-        image: minio/minio
-        volumes:
-          - ${{ github.workspace }}/data:/data
-        ports:
-          - 9000:9000
-        env:
-          MINIO_ACCESS_KEY: minio
-          MINIO_SECRET_KEY: minio123
-        options: --entrypoint "minio server /data" --health-cmd "curl -f http://localhost:9000/minio/health/live" --health-interval 10s --health-timeout 5s --health-retries 5
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
@@ -31,6 +19,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt;
+    - name: Start test environment
+      run: docker-compose -f test_environment.yml up -d
     - name: Test with unittest and coverage-report
       env:
         TOKEN: ${{ secrets.IBMQ_TOKEN }}
