--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ marshmallow==3.13.0
 minio==7.1.3
 mthree==1.0.0
 pyquil==3.0.1
-qiskit==0.37.1
+qiskit==0.44.1
 qiskit_ionq==0.1.4
 symengine==0.9
 Werkzeug==2.0.1
 qiskit-ignis==0.6.0
+qiskit_aer==0.12.2
+qiskit_ibm_provider==0.7.1
